Fix issue where task would fail if there are no shell scripts found or multiple shell scripts found.

--- a/batect-bundle.yml
+++ b/batect-bundle.yml
@@ -13,4 +13,4 @@ tasks:
     group: Linting tasks
     run:
       container: shellcheck
-      command: sh -c "shellcheck $(find . -name '*.sh')"
+      command: run-shellcheck
