--- a/.batect/shellcheck/Dockerfile
+++ b/.batect/shellcheck/Dockerfile
@@ -1,3 +1,7 @@
 FROM alpine:3.12.0
 
-RUN apk add --no-cache shellcheck=0.7.1-r1
+RUN apk add --no-cache \
+    bash=5.0.17-r0 \
+    shellcheck=0.7.1-r1
+
+COPY run-shellcheck /usr/local/bin
