--- a/batect.yml
+++ b/batect.yml
@@ -8,7 +8,7 @@ containers:
     working_directory: /code
 
   hadolint:
-    image: hadolint/hadolint:v2.0.0
+    image: hadolint/hadolint:v2.0.0-alpine
     volumes:
       - local: .
         container: /code
